# Saliency-object-detection

./: README.md
img/: quantization2.raw  saliency.raw  salincy_smooth.raw  trimap.raw
include/: .saliencyMap.cpp.swp  saliencyMap.cpp  saliencyMap.hpp
main/: CMakeLists.txt  DIP  build.sh  compile.sh  dip.cpp
main/ok/: dip.cpp
main/segmentation/cli/: main.cpp
main/segmentation/output/: target.csv
