cmake_minimum_required(VERSION 2.8)
project( DIP )
find_package( OpenCV REQUIRED )
set(MY_DIR ../include)
set(SOURCES ${MY_DIR}/saliencyMap.cpp ${MY_DIR}/saliencyMap.hpp)
set (CMAKE_CXX_STANDARD 11)
include_directories( ${OpenCV_INCLUDE_DIRS}  ${MY_DIR})
add_executable( DIP dip.cpp ${SOURCES})
target_link_libraries( DIP ${OpenCV_LIBS} )
